--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
   <head>
     <meta charset="UTF-8">
     <title>Panier de fruits</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
   </head>
   <body>
     <h1>Commander un panier de fruits</h1>
-    <form name="commande">
+    <form name="commande" action="merci.html" method="get">
       <table>
         <caption>Votre panier</caption>
         <thead>
@@ -21,26 +23,26 @@
           <tr id="Peches">
             <td>Sac(s) de pêches</td>
             <td id="prixPeches" class="prix">10</td>
-            <td><input id="nbPeches"></td>
-            <td class="totalFruit">0</td>
+            <td><input id="nbPeches" onchange="valider('Peches')"></td>
+            <td id="totalPeches" class="totalFruit">0</td>
           </tr>
           <tr id="Poires">
             <td>Sac(s) de poires</td>
             <td id="prixPoires" class="prix">12</td>
-            <td><input id="nbPoires"></td>
-            <td class="totalFruit">0</td>
+            <td><input id="nbPoires" onchange="valider('Poires')"></td>
+            <td id="totalPoires" class="totalFruit">0</td>
           </tr>
           <tr id="Pommes">
             <td>Sac(s) de pommes</td>
             <td id="prixPommes" class="prix">11</td>
-            <td><input id="nbPommes"></td>
-            <td class="totalFruit">0</td>
+            <td><input id="nbPommes" onchange="valider('Pommes')"></td>
+            <td id="totalPommes" class="totalFruit">0</td>
           </tr>
         </tbody>
         <tfoot>
           <tr>
             <th class="total" colspan="3">Total</th>
-            <td class="total" id="total"></td>
+            <td class="total" id="total">0</td>
           </tr>
         </tfoot>
       </table>
