--- a/merci.html
+++ b/merci.html
@@ -3,6 +3,7 @@
     <meta charset="UTF-8">
     <title>Feuille de style</title>
     <link rel="stylesheet" type="text/css" href="style.css"/>
+    <script src="script2.js"></script>
   </head>
   <body>
     <header>
