--- a/merci.html
+++ b/merci.html
@@ -9,7 +9,7 @@
     <header>
       <h1>Commander un panier de fruits</h1>
     </header>
-    <main class="bigText center">
+    <main id="main" class="bigText center">
       <p>Merci de faire affaire avec nous !</p>
     </main>
   </body>
